--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Cardápio Digital"
+      content="Sistema de Reserva de Ambientes EFG"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Food - Faça seu pedido</title>
+    <title>SISREAG</title>
   </head>
   <body>
     <div id="root"></div>
+    Lab
+    
 
   </body>
 </html>
